# spelling-hs

./: .gitignore  LICENSE  Main.hs  Makefile  README.md  spelling-hs.cabal  spelling-hs.list-heavy.prof  spelling-hs.set-heavy.prof  spelling.lhs  stack.yaml
bench/: all.html  bench.hs  multiset.html  proba.html  words.html
exe/: Main.hs
src/: Main.hs  Spelling.hs
