name:                spelling-hs
version:             0.1.0.0
synopsis:            reimplement http://norvig.com/spell-correct.html
-- description:
license:             MIT
license-file:        LICENSE
author:              brady.ouren
maintainer:          brady.ouren@gmail.com
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable spelling-hs
  other-extensions:    NoImplicitPrelude, OverloadedStrings
  main-is:             Main.hs
  hs-source-dirs:      exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9
    , spelling-hs -any
    , unordered-containers
    , protolude
    , text
    , multiset
  default-language:    Haskell2010

library
  exposed-modules:
      Spelling
  hs-source-dirs:      src
  -- other-modules:
  other-extensions:    NoImplicitPrelude, OverloadedStrings
  build-depends:
      base >=4.9
    , unordered-containers
    , protolude
    , text
    , multiset
  default-language:    Haskell2010

benchmark benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  build-depends:       base >= 4.9
                     , spelling-hs
                     , criterion
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N